Add dependency jar in runtime assembly